Fixed alignments and margins

--- a/frontend/src/components/ImageCard/imageCard.css
+++ b/frontend/src/components/ImageCard/imageCard.css
@@ -17,7 +17,7 @@
 }
 
 .card:hover {
-	transform: translate(20px);
+	/* transform: translate(20px); */
 }
 
 .card:before {
@@ -28,18 +28,18 @@
 	display: block;
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(
-		to bottom,
-		rgba(0, 176, 155, 0.5),
-		rgba(150, 201, 61, 1)
-	);
+	background: linear-gradient(to bottom,
+			rgba(27, 27, 27, 0.5),
+			rgb(116, 116, 116));
 	z-index: 2;
 	transition: 0.5s all;
 	opacity: 0;
 }
+
 .card:hover:before {
 	opacity: 1;
 }
+
 .card img {
 	width: 100%;
 	height: 100%;
